2008-08-05  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-main.c: Make sure we don't just exit
	when we have processed items. ALWAYS wait at least 10 seconds
	before quitting after EVERY "finished" signal. The indexer was
	being started/stopped constantly for small monitor event groups.
	Now it runs constantly.
	
	* src/trackerd/tracker-monitor.c: Make some of the logging debug
	level so we don't spam the console so much.
	
	* src/trackerd/tracker-processor.c: Set state as indexing in the
	queue handler callback.

2008-08-05  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.[ch]: Add property to enable and
	disable monitor events from being processed. 

	* src/trackerd/tracker-processor.c: Make sure we disable monitor
	events while crawling the file system and enable then once done.
	This way we can't get monitor events causing the daemon to signal
	"indexing" state up before we have finished processing each module
	for crawling. Also, when we start processing new files from
	monitor events, put us into "indexing" state instead of staying
	"idle". 

2008-08-05  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	(tracker_crawler_is_path_ignored): Add to the comment in this
	function so people know why we have an internal function and an
	external function doing the same thing.
	
	* src/trackerd/tracker-monitor.c:
	* src/trackerd/tracker-processor.[ch]: Changed the way we get
	*Private data in these modules so we don't do type checking on the
	GObjects for every function just to get the private struct.
	This should improve speed slightly. This is exactly what the
	crawler does.

2008-08-05  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/modules/evolution.c: Use g_try_malloc0
	instead of just g_malloc0 so we don't try to allocate rediculous
	lengths of memory and abort. Also, if we can't parse the file, we
	now return NULL metadata and continue as usual.
	